@@ -1,3 +1,9 @@
+2003-11-04 1.2.12
+**
+INSERT INTO commands VALUES ('UPDATEIDLE', 'ADMIN', 950, 0, '', '',
+now()::abstime::int4, 'Jeekay');
+**
+
 2003-04-29 1.2.09
 **
 CREATE TABLE config (
