@@ -1,5 +1,5 @@
 #ifndef __CSERVICECOMMANDS_H
-#define __CSERVICECOMMANDS_H "$Id: cserviceCommands.h,v 1.19 2003-04-29 18:37:35 jeekay Exp $"
+#define __CSERVICECOMMANDS_H "$Id: cserviceCommands.h,v 1.20 2003-11-04 20:47:38 jeekay Exp $"
 
 #include	<string>
 #include	"iClient.h"
@@ -121,7 +121,6 @@ DECLARE_COMMAND( ADMINCMDS )
 DECLARE_COMMAND( CHINFO )
 DECLARE_COMMAND( COMMENT )
 DECLARE_COMMAND( CONFIG )
-DECLARE_COMMAND( DEBUG )
 DECLARE_COMMAND( FORCE )
 DECLARE_COMMAND( GETLEVEL )
 DECLARE_COMMAND( GSUSPEND )
@@ -130,7 +129,6 @@ DECLARE_COMMAND( GLOBNOTICE )
 DECLARE_COMMAND( INVME ) 
 DECLARE_COMMAND( OFFICIAL )
 DECLARE_COMMAND( PURGE )
-DECLARE_COMMAND( QUOTE )
 DECLARE_COMMAND( REGISTER )
 DECLARE_COMMAND( REHASH )
 DECLARE_COMMAND( REMIGNORE )
@@ -140,9 +138,15 @@ DECLARE_COMMAND( UNFORCE )
 DECLARE_COMMAND( SAY )
 DECLARE_COMMAND( SCAN )
 DECLARE_COMMAND( SERVNOTICE )
-DECLARE_COMMAND( SHUTDOWN )
 DECLARE_COMMAND( STATS )
+
+// Coder commands
+DECLARE_COMMAND( DEBUG )
+DECLARE_COMMAND( QUOTE )
+DECLARE_COMMAND( SHUTDOWN )
 DECLARE_COMMAND( UPDATEDB )
+DECLARE_COMMAND( UPDATEIDLE )
+
 } // namespace gnuworld
 
 #endif // __CSERVICECOMMANDS_H
